Fixed typo in composer.

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   },
   "autoload": {
     "psr-4": {
+      "WordPress\\": "lib/WordPress",
       "WpSyntaxHighlighter\\": "lib/WpSyntaxHighlighter"
     }
   }
