--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   },
   "require": {
     "dsawardekar/encase-php": "~0.1.0",
-    "dsawardekar/wordpress-twig-helper": "~0.1.1"
+    "dsawardekar/wordpress-twig-helper": "~0.1.1",
+    "dsawardekar/wp-requirements": "~0.1.0"
   },
   "autoload": {
     "psr-4": {
